# RoboMaster2022_visual_program

./: .gitignore  CMakeLists.txt  README.md  start.sh
asset/json/: armor copy.json  armor.json  camera copy.json  common.json  energy copy.json  energy.json  sentry.json
asset/model/: bestyao_13_416.onnx  bestyao_13_416.xml
include/: aimbot.hpp  debug.hpp  energy.hpp  get_frame.hpp  high_num.hpp  hint.hpp  json.hpp  logger.hpp  serial.hpp  utils.hpp  xml.hpp
src/: aimbot.cpp  energy.cpp  get_frame.cpp  high_num.cpp  hint.cpp  json.cpp  logger.cpp  main.cpp  serial.cpp  utils.cpp  xml.cpp
test/: restart_video.cpp  test_hint.cpp  test_json.cpp  test_kalman.cpp  test_utils.cpp  test_video.cpp  test_xml.cpp
